navigation keys (j ~ J, k ~ K); correct z-index

--- a/files/style-list-simple.css
+++ b/files/style-list-simple.css
@@ -6,7 +6,7 @@
     /*background-color: #444;*/
     background-image: url('bg2.png');
     padding:10px;
-    z-index: 1;
+    z-index: 2;
     min-height: 100%;
 }
 .item {
